tests/testWorkflows/invalid_workflows/invalidActionWorkflow.playbook
{
    "name": "invalidActionWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "next_steps": [
                {
                    "conditions": [
                        {
                            "action": "regMatch",
                            "args": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action": "length",
                                    "args": []
                                }
                            ]
                        }
                    ],
                    "destination_uid": "1",
                    "source_uid": "2",
                    "status": "Success"
                }
            ],
            "start": "start",
            "steps": [
                {
                    "action": "invalid",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "risk": 0,
                    "uid": "1"
                },
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "inputs": [],
                    "name": "start",
                    "position": {},
                    "risk": 0,
                    "uid": "2"
                }
            ]
        }
    ]
}